test/negative/BadVoid2.java
public class BadVoid {
    public BadVoid(void x) {
    }
}
